--- a/RecyRoute/Frontend/Página/index.html
+++ b/RecyRoute/Frontend/Página/index.html
@@ -6,7 +6,7 @@
     <title>RecyRoute</title>
     <!--Favicon-->
     <link rel="icon" href="../Recursos/Iconos/Head/logorecyroute.svg" />
-    <!--CSS-->
+    <!--Archivos CSS-->
     <link rel="stylesheet" href="../Recursos/Css/reset.css">
     <link rel="stylesheet" href="../Recursos/Css/base.css">
     <link rel="stylesheet" href="../Recursos/Css/headerprincipal.css">
