--- a/RecyRoute/Fronted/Página/restablecercontrasena.html
+++ b/RecyRoute/Fronted/Página/restablecercontrasena.html
@@ -2,16 +2,39 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <!--Titulo de la pagina-->
     <title>RecyRoute</title>
-    <!--Favicon-->
     <link rel="icon" href="../Recursos/Iconos/Head/logorecyroute.svg" />
     <!--CSS-->
-    <link rel="stylesheet" href="../Recursos/Css/reset.css">
-    <link rel="stylesheet" href="../Recursos/Css/base.css">
-    <link rel="stylesheet" href="../Recursos/Css/iniciarsesion.css" />
+    <!-- Globales -->
+    <link rel="stylesheet" href="../Recursos/Css/Global/base.css" />
+    <link rel="stylesheet" href="../Recursos/Css/Global/tipografia.css" />
+    <link rel="stylesheet" href="../Recursos/Css/Global/encabezadosecundario.css" />
+    <!-- Componentes -->
+    <link rel="stylesheet" href="../Recursos/Css/Componentes/botones.css" />
+    <link rel="stylesheet" href="../Recursos/Css/Componentes/formularios.css" />
+    <!-- Página específica -->
+    <link rel="stylesheet" href="../Recursos/Css/Paginas/restablecercontrasena.css" />
 </head>
 <body>
+    <header class="EncabezadoSecundario">
+        <h1 class="LogoRecyRoute"><a href="index.html">RecyRoute</a></h1>
+    </header>
+    <main>
+        <div class="CajaRestablecerContrasena">
+            <h2 class="TituloRestablecer">Restablecer contraseña</h2>
+            <p class="MensajeInstrucciones">Crea una nueva contraseña para tu cuenta. Asegúrate de que sea segura y fácil de recordar.</p>
 
+            <input type="password" class="NuevaContrasena" name="NuevaContrasena" placeholder="Ingresa tu nueva contraseña" required />
+
+            <p class="MensajeValidacion">Validaciones sugeridas: mínimo 8 caracteres, al menos una mayúscula, un número y un símbolo.</p>
+
+            <input type="password" class="ConfirmarContrasena" name="ConfirmarContrasena" placeholder="Confirmar contraseña" required />
+
+            <p class="MensajeCoincidencia">Las contraseña deben coincidir</p>
+
+            <!--<button class="btn BotonRestablecer">Restablecer contraseña</button>-->
+            <button class="btn BotonRestablecer" onclick="location.href='restablecercontrasena2.html'">Restablecer contraseña</button>
+        </div>
+    </main>
 </body>
 </html>
